// protoのバージョン宣言
syntax = "proto3";

// protoファイルから自動生成させる　Goのコードの配置先
option go_package = "pkg/grpc";

// packageの宣言
package myapp;

// サービスの定義
service GreetingService {
	// サービスが持つメソッドの定義
	rpc Hello (HelloRequest) returns (HelloResponse);
	// サーバーストリーミングRPC
	rpc HelloServerStream (HelloRequest) returns (stream HelloResponse);
	// クライアントストリーミングRPC
	rpc HelloClientStream (stream HelloRequest) returns (HelloResponse);
	// 双方向ストリーミングRPC
	rpc HelloBiStreams (stream HelloRequest) returns (stream HelloResponse);
}

// パッケージとして公開されている型をinport
/* import "google/protobuf/timestamp.proto"; */

// 型の定義
message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
}

/* message MyMessage { */
/* 	string message = 1; */
/* 	google.protobuf.Timestamp create_time = 2; */
/* } */
